--- a/src/components/ExploreContainer.css
+++ b/src/components/ExploreContainer.css
@@ -4,7 +4,8 @@
   left: 0;
   right: 0;
   top: 50%;
-  transform: translateY(-50%);
+  /* transform: translateY(-50%); */
+
 }
 
 .container strong {
@@ -15,7 +16,7 @@
 .container p {
   font-size: 16px;
   line-height: 22px;
-  color: #8c8c8c;
+  color: #000;
   margin: 0;
 }
 
